# netprobe-mcp

./: NetProbe_AI_UI_MASTER_ARCHITECT_PROMPT.md  README.md  main.py  pyproject.toml  soc_report_v2.html
Full automation - NetProbe MCP/: Automation_Feasibility_Inventory.md  Executive_Summary.md  Immediately_Doable_Automations.md  Quick_Reference_Card.md  README_MASTER_INDEX.md
evidence/: Open Notebook.onetoc2
netprobe_data/: Open Notebook.onetoc2  netprobe_ai_baseline.db
recordings/: Open Notebook.onetoc2
recordings/0f0baac3-1408-4cb2-8f0f-51f2eda9b215/: Open Notebook.onetoc2
recordings/729b9f4f-2e5c-4b36-a364-ccf0136f98c3/: 2026-02-17T09-32-27.709546+00-00_c110b78f-7021-4a46-a2d8-bc3790fb3fef.json  2026-02-17T09-32-42.319805+00-00_0ad947cb-b29a-41ce-b659-f345af417cc5.json  2026-02-17T09-32-57.239549+00-00_2ec00ae6-5278-465b-ad8d-7bb714f7f0a2.json  2026-02-17T09-33-11.991375+00-00_df91c1f5-dd34-496a-a344-80517a19ddd2.json  2026-02-17T09-33-26.471978+00-00_9a2248f0-329c-4095-b778-248b819a262c.json  2026-02-17T09-33-39.383931+00-00_6a430fd0-c52a-421e-bc11-1bdaaa50f798.json  2026-02-17T09-33-51.673001+00-00_cf3ac41a-92c2-43d9-b788-af00ba65e6a6.json  Open Notebook.onetoc2
recordings/863f0526-21bb-4190-94e8-4a7c475bb1de/: 2026-05-01T18-33-35.382789+00-00_901f1b58-c9a1-49d7-9d92-cd4dac35465b.json  2026-05-01T18-33-43.917443+00-00_49d5d68b-192d-4880-acdb-3ec594aa4e43.json
recordings/dfaef104-d1b7-439b-93b0-0ee6cc24f533/: 2026-02-17T09-41-13.309894+00-00_1488ec30-d501-4e5c-a5c4-cd09ccbfcdae.json  Open Notebook.onetoc2
registry/: Open Notebook.onetoc2
