[project]
name = "fastmcp-demo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.0",
    "psutil>=7.2.2",
    "requests>=2.33.1",
    "matplotlib>=3.10.8",
    "fpdf2>=2.8.7",
    "uvicorn>=0.44.0",
    "wmi>=1.5.1",
]
